make warning to be disabled per mod